using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Invader.Stages
{
	public class TestStage : IStage
	{
		public float LeftEdgePosX => -10;

		public float RightEdgePosX => 10;
	}
}
